<markup/> for kitchensink

--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="app">
-
+    <!--
     <section id="login">
         <article class="splash">
             <div class="indented">
@@ -57,7 +57,7 @@
             </div>
         </article>
     </section>
-
+    -->
 
     <!-- ============================= kitchen-sink ============================= -->
 
@@ -270,8 +270,6 @@
                     <li>
                         <label>type="text"</label>
                         <input type="text" placeholder="Input text"/>
-                    </li>
-                    <li>
                         <label>type="password"</label>
                         <input type="password" placeholder="Input password"/>
                     </li>
@@ -305,7 +303,7 @@
                 <ul class="form">
                     <li class="anchor" data-icon="edit">Example of checkbox</li>
                     <li>
-                        <label>You like LungoJS forms?</label>
+                        <label>Do you like LungoJS forms?</label>
                         <label class="checkbox onright"><input type="checkbox" id="checkbox-0" checked/></label>
                     </li>
                 </ul>
@@ -382,7 +380,7 @@
     <!-- ============================= navigation ============================= -->
 
     <section id="navigation">
-        <header data-back="home" data-title="Navigation">
+        <header data-back="home" data-title="Navigation Demo">
             <nav class="onright">
                 <a href="#" class="current" data-count="23" data-icon="star"></a>
                 <a href="#back" data-target="section" data-icon="left"></a>
