<markup/> for Kitchen Sink

--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -380,10 +380,9 @@
     <!-- ============================= navigation ============================= -->
 
     <section id="navigation">
-        <header data-back="home" data-title="Navigation Demo">
+        <header data-back="home" data-title="Navigation">
             <nav class="onright">
                 <a href="#" class="current" data-count="23" data-icon="star"></a>
-                <a href="#back" data-target="section" data-icon="left"></a>
                 <a href="#navigation-secondary" data-target="section" data-icon="right"></a>
             </nav>
         </header>
