add jasmine test suit, create some spec tests and allow put and delete requests on LUNGO.Service

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -14,13 +14,16 @@
   <!-- end lib source files -->
 
   <!-- Lungo source files here... -->
-    <script type="text/javascript" src="../src/Lungo/Lungo.js"></script>
-    <script type="text/javascript" src="../src/Lungo/Lungo.Core.js"></script>
+    <script type="text/javascript" src="../src/lib/zepto.js"></script>
+    <script type="text/javascript" src="../src/Lungo.js"></script>
+    <script type="text/javascript" src="../src/Lungo.Core.js"></script>
+    <script type="text/javascript" src="../src/Lungo.Service.js"></script>
   <!-- end Lungo source files -->
 
   <!-- Lungo spec files here... -->
     <script type="text/javascript" src="Lungo.Spec.js"></script>
     <script type="text/javascript" src="Lungo.Core.Spec.js"></script>
+    <script type="text/javascript" src="Lungo.Service.Spec.js"></script>
   <!-- Lungo spec files -->
 
   <script type="text/javascript">
