New <markup/> for KitchenSink and Release Test

--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="app">
-    <!--
+
     <section id="login">
         <article class="splash">
             <div class="indented">
@@ -57,7 +57,6 @@
             </div>
         </article>
     </section>
-    -->
 
     <!-- ============================= kitchen-sink ============================= -->
 
@@ -382,8 +381,8 @@
     <section id="navigation">
         <header data-back="home" data-title="Navigation">
             <nav class="onright">
-                <a href="#" class="current" data-count="23" data-icon="star"></a>
-                <a href="#navigation-secondary" data-target="section" data-icon="right"></a>
+                <a href="#" class="current" class="current" data-count="23" data-icon="star"><abbr>asas</abbr></a>
+                <a href="#navigation-secondary" class="current" data-target="section" data-icon="right"><abbr>Edit</abbr></a>
             </nav>
         </header>
 
@@ -499,6 +498,7 @@
 
     <!-- LungoJS Libraries (Development mode)-->
     <script src="../../src/Lungo.js"></script>
+
     <script src="../../src/Lungo.App.js" ></script>
     <script src="../../src/Lungo.Core.js"></script>
     <script src="../../src/Lungo.Dom.js"></script>
@@ -524,6 +524,7 @@
     <script src="../../src/boot/Lungo.Boot.Data.js"></script>
     <script src="../../src/boot/Lungo.Boot.Section.js"></script>
     <script src="../../src/boot/Lungo.Boot.Article.js"></script>
+
     <!-- LungoJS - Sandbox App -->
     <script src="app/app.js"></script>
     <script src="app/events.js"></script>
