<markup/> for Kitchen Sink

--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.form.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.colour.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.icon.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.default.css">
+    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.pro.css">
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="assets/stylesheets/app.css">
 
@@ -63,6 +63,9 @@
     <section id="kitchen-sink">
         <header data-title="LungoJS Kitchen Sink">
             <a href="#" class="button" data-target="aside" data-icon="items"></a>
+            <nav class="onright">
+            <a href="#" class="active" data-article="authors"  data-label="help" data-icon="question"></a>
+            </nav>
         </header>
 
         <aside id="kitchen-sink-scroll" class="scrollable">
@@ -386,12 +389,12 @@
             </nav>
         </header>
 
-        <footer class="toolbar">
+        <footer class="toolbar with-labels">
             <nav>
-                <a href="#nav-1" data-target="article" class="current" data-icon="user"></a>
-                <a href="#nav-2" data-target="article" data-icon="calendar" data-count="17"></a>
-                <a href="#nav-3" data-target="article" data-icon="mail"></a>
-                <a href="#nav-4" data-target="article" data-icon="phone"></a>
+                <a href="#nav-1" data-target="article" class="current" data-icon="user" data-label="User"></a>
+                <a href="#nav-2" data-target="article" data-icon="calendar" data-count="17" data-label="Calendar"></a>
+                <a href="#nav-3" data-target="article" data-icon="mail" data-label="Emails" data-count="124"></a>
+                <a href="#nav-4" data-target="article" data-icon="phone" data-label="Calls" data-count="12"></a>
             </nav>
         </footer>
 
