Example of ajax sections

--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -473,8 +473,6 @@
         <article></article>
     </section>
 
-
-
     <!-- ============================= header footer ============================= -->
 
     <!-- ============================= lists ============================= -->
@@ -554,6 +552,7 @@
     <script src="../../src/data/Lungo.Data.Storage.js"></script>
     <script src="../../src/attributes/Lungo.Attributes.Data.js"></script>
     <script src="../../src/boot/Lungo.Boot.js"></script>
+    <script src="../../src/boot/Lungo.Boot.Async.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Stats.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Layout.js"></script>
     <script src="../../src/boot/Lungo.Boot.Events.js"></script>
