--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -17,6 +17,9 @@
 
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.base.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.css">
+    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.nav.css">
+    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.aside.css">
+    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.article.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.list.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.splash.css">
@@ -25,25 +28,96 @@
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.colour.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.icon.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.pro.css">
-    <!-- App Stylesheet -->
-    <link rel="stylesheet" href="assets/stylesheets/app.css">
 
+    <style>
+        .scroll-demo {
+            background: #ccc;
+            margin: 10px;
+            overflow: hidden;
+        }
+
+        .scroll-demo.horizontal {
+            height: 68px;
+            width: inherit;
+            display: block;
+        }
+
+        .scroll-demo.vertical {
+            top: 72px;
+            width: 72px;
+            height: 196px;
+        }
+
+        .scroll-demo span {
+            height: 64px;
+            width: 64px;
+            background: #666;
+            text-align: center;
+            line-height: 64px;
+            display: inline-block;
+            margin: 2px 0px 0px 2px;
+        }
+    </style>
 </head>
 
 <body class="app">
+
+    <section id="sec-1" class="">
+        <header data-title="Test Asides">
+            <a href="#asi-1" data-target="aside" class="button blue">asi-1</a>
+
+            <a href="#asi-2" data-target="aside" class="button green onright">sec-2</a>
+        </header>
+        <footer class="toolbar">
+            <nav>
+                <a href="#art-1"  class="current" data-target="article" data-icon="left"></a>
+                <a href="#art-2" data-target="article" data-icon="right"></a>
+                <a href="#sec-2" data-target="section" data-icon="files"></a>
+            </nav>
+        </footer>
+
+        <article id="art-1">Art-1</article>
+        <article id="art-2">Art-2</article>
+    </section>
+
+    <section id="sec-2">
+        <header data-back="home"></header>
+        <article>
+        </article>
+    </section>
+
+
+    <aside id="asi-1" class="scrollable">
+        <a href="#art-1" data-target="article">Art-1</a>
+        <a href="#art-2" data-target="article">Art-2</a>
+        <a href="#sec-2" data-target="section">Sec-1</a>
+    </aside>
+
+    <aside id="asi-2" class="onright">
+        <a href="#art-1" data-target="article">Art-1</a>
+        <a href="#sec-2" data-target="section">Sec-1</a>
+    </aside>
+
+
+    <!--
     <section id="test">
-        <header data-title="LungoJS Kitchen Sink">
+        <header data-title="LungoJS Kitchen Sink" class="extended">
             <a href="#" data-target="aside" class="button" data-icon="refresh">&nbsp;Aside</a>
             <nav class="onright">
-                <a href="#" data-article="list-added" class="button red" data-icon="right">&nbsp;Add</a>
-                <a href="#" data-article="list-auto" class="button blue" data-icon="right">&nbsp;Add</a>
+                <a href="#" data-article="list-added" class="button red" data-icon="up"></a>
+                <a href="#" data-article="list-added" class="button red prepend" data-icon="down"></a>
+                <a href="#" data-article="list-auto" class="button blue" data-icon="plus"></a>
+                <a href="#" data-article="list-dinamics" class="button green">Append</a>
+            </nav>
+            <nav class="groupbar">
+                <a href="#list-added" class="current" data-target="article">Dinamic</a>
+                <a href="#list-auto" data-target="article">Automatic</a>
+                <a href="#list-dinamics" data-target="article">Special</a>
             </nav>
         </header>
 
         <footer class="toolbar">
             <nav>
-                <a href="#list-added" class="current" data-target="article" data-icon="add"></a>
-                <a href="#list-auto" data-target="article" data-icon="add"></a>
                 <a href="#async-local" data-target="section" data-icon="settings"></a>
                 <a href="#async-remote" data-target="section" data-icon="wifi"></a>
             </nav>
@@ -60,11 +134,20 @@
                 <a href="#a">slaka</a>
                 <a href="#a">slaka</a>
             </ul>
-
         </aside>
 
         <article id="list-added" class="list"></article>
         <article id="list-auto" class="list"></article>
+        <article id="list-dinamics">
+            <div id="scroll-horizontal" class="scroll-demo scrollable horizontal">
+                <div style="width:1036px;">
+                </div>
+            </div>
+
+            <div id="scroll-vertical" class="scroll-demo scrollable vertical">
+                <div></div>
+            </div>
+        </article>
     </section>
 
     <section id="next">
@@ -93,15 +176,13 @@
         <article id="files">Files</article>
         <article id="folder">Folder</article>
     </section>
-
+    -->
 
     <!-- Third parties dependencies -->
     <script src="../../src/lib/QuoJS.js"></script>
     <script src="../../src/lib/iscroll-lite.js"></script>
-
     <!-- LungoJS Libraries (Development mode)-->
     <script src="../../src/Lungo.js"></script>
-
     <script src="../../src/Lungo.App.js" ></script>
     <script src="../../src/Lungo.Core.js"></script>
     <script src="../../src/Lungo.Dom.js"></script>
@@ -120,6 +201,7 @@
     <script src="../../src/data/Lungo.Data.Sql.js"></script>
     <script src="../../src/data/Lungo.Data.Storage.js"></script>
     <script src="../../src/attributes/Lungo.Attributes.Data.js"></script>
+    <script src="../../src/Lungo.fallback.js"></script>
     <script src="../../src/boot/Lungo.Boot.js"></script>
     <script src="../../src/boot/Lungo.Boot.Async.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Stats.js" ></script>
@@ -128,14 +210,10 @@
     <script src="../../src/boot/Lungo.Boot.Data.js"></script>
     <script src="../../src/boot/Lungo.Boot.Section.js"></script>
     <script src="../../src/boot/Lungo.Boot.Article.js"></script>
-
     <!-- LungoJS - Sandbox App -->
     <script src="app/app.js"></script>
     <script src="app/events.js"></script>
     <script src="app/view.js"></script>
     <script src="app/services.js"></script>
-
-
-
 </body>
 </html>
