--- a/examples/kitchen-sink/app/sections/buttons-extra.html
+++ b/examples/kitchen-sink/app/sections/buttons-extra.html
@@ -1,12 +1,16 @@
 <section id="buttons-extra">
     <header data-back="home" data-title="Example of buttons">
-        <a href="#" class="button red onright" data-icon="add">With icon</a>
-        <a href="#" class="button arcticblue onright">Text</a>
+        <nav class="onright">
+            <a href="#" class="button red " data-icon="add">With icon</a>
+            <a href="#" class="button arcticblue ">Text</a>
+        </nav>
     </header>
 
     <footer>
-        <a href="#" class="button blue onleft">Text</a>
-        <a href="#" class="button yellow onleft" data-icon="left"></a>
+        <nav class="onleft">
+            <a href="#" class="button blue ">Text</a>
+            <a href="#" class="button yellow " data-icon="left"></a>
+        </nav>
         <a href="#" class="button orange onright" data-icon="right">onright</a>
     </footer>
 
