--- a/examples/kitchen-sink/app/sections/lists.html
+++ b/examples/kitchen-sink/app/sections/lists.html
@@ -10,10 +10,6 @@
 
     <article id="list-plain" class="list"></article>
     <article id="list-ordered" class="list"></article>
-    <article id="list-indented" class="list scrollable">
-        <div class="indented"  id="list-indented-container"><ul></ul></div>
-    </article>
-    <article id="list-rounded" class="list rounded scrollable">
-        <div class="indented" id="list-rounded-container"><ul></ul></div>
-    </article>
+    <article id="list-indented" class="list indented scrollable"></article>
+    <article id="list-rounded" class="list indented rounded scrollable"></article>
 </section>
