--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -69,6 +69,7 @@
             <nav>
                 <a href="#art-1"  class="current" data-target="article" data-title="Art-1" data-icon="left"></a>
                 <a href="#art-2" data-target="article" data-title="Art-2" data-icon="right"></a>
+                <a href="#art-3" data-target="article" data-title="Art-3" data-icon="right"></a>
                 <a href="#sec-2" data-target="section" data-icon="files"></a>
                 <a href="#test" data-target="section" data-icon="settings"></a>
             </nav>
@@ -99,6 +100,8 @@
             <input type="text" placeholder="Some text..." />
             </p>
         </article>
+
+        <article id="art-3" class="list indented scrollable"></article>
     </section>
 
     <section id="sec-2">
@@ -208,7 +211,7 @@
     <script src="../../src/attributes/Lungo.Attributes.Data.js"></script>
     <script src="../../src/Lungo.Fallback.js"></script>
     <script src="../../src/boot/Lungo.Boot.js"></script>
-    <script src="../../src/boot/Lungo.Boot.Async.js" ></script>
+    <script src="../../src/boot/Lungo.Boot.Resources.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Stats.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Layout.js"></script>
     <script src="../../src/boot/Lungo.Boot.Events.js"></script>
