--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -395,7 +395,7 @@
             </nav>
         </footer>
 
-        <article id="nav-1" data-title="Article 1"></article>
+        <article id="nav-1" data-title="Article 1"> </article>
         <article id="nav-2" data-title="Article 2"></article>
         <article id="nav-3" data-title="Article 3"></article>
         <article id="nav-4" data-title="Article 4"></article>
@@ -415,7 +415,11 @@
             </nav>
         </footer>
 
-        <article id="nav-extra-1" data-title="Article 1"></article>
+        <article id="nav-extra-1" data-title="Article 1">
+          <div class="indented">
+            <a href="#kitchen-sink" class="button big" data-target="rewind">Rewind to the #kitchen-sink section</a>
+          </div>
+        </article>
         <article id="nav-extra-2" data-title="Article 2"></article>
         <article id="nav-extra-3" data-title="Article 3"></article>
     </section>
