Aside in tablet devices

--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -110,9 +110,11 @@
         </article>
     </section>
 
-    <aside id="asi-1" class="scrollable">
+    <aside id="asi-1" class="scrollable current">
+        <div class="anchor">Users</div>
         <a href="#art-1" data-target="article">Art-1</a>
         <a href="#art-2" data-target="article">Art-2</a>
+        <div class="anchor">Users</div>
         <a href="#sec-2" data-target="section">Sec-1</a>
     </aside>
 
